# pf-tutoreducativo

./: .env.example  AGENTS.md  README.md  main.py  main_rag.py  main_rag_avanzado.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
core/: tokenlab.py
prompting/: promptkit.py
prompting/templates/: ticket_classifier.py
rag/: ingestion.py  retrieval.py
