[project]
name = "pf-tutoreducativo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "groq>=1.1.1",
    "matplotlib>=3.10.8",
    "openai>=2.29.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "streamlit>=1.55.0",
]
